# fake-api

./: CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml
api/: code.py  main.py
